# erateapp.com

./: .gitignore  README.md  Resume.docx  Resume.txt  charter-schools.html  index.html  install-prompt.js  libraries.html  manifest.json  robots.txt  schools.html  sitemap.xml  style.css  sw.js
API/: README.md  query_erate_data.py
blog/: 10-common-e-rate-mistakes.html  after-e-rate-form-471-filed.html  e-rate-category-2-wifi-funding.html  e-rate-competitive-bidding-rules.html  e-rate-eligible-services-list-2026.html  e-rate-for-libraries-guide.html  e-rate-funding-charter-schools.html  e-rate-pia-review-guide.html  form-471-deadline-2026-complete-guide.html  how-to-apply-for-e-rate-funding.html  how-to-win-e-rate-appeal.html  increase-e-rate-discount-percentage.html  index.html
guides/: e-rate-deadlines-2026.html  what-is-e-rate.html
opendata/: .env.example  .gitignore  BEN.csv  BEN_enriched.csv  PROJECT_STATUS.md  README.md  ben_2025_result.json  ben_enricher.ps1  ben_enricher.py  check_c2_api.py  data_exporter.py  debug_usac.py  entity_fields.txt  get_ben_funding_balance.py  llm_analyzer.py  open_tcp_8501.ps1  requirements.txt  run_open_tcp_8501_admin.bat  sample_data.json  start_skyrate_ai.bat  start_skyrate_ai.ps1  test_c2_budget_comparison.py  test_form471_fields.py  test_funding_balance.py  test_output.json  test_output.txt  test_output2.txt  usac_data_fetcher.py  usac_full_scraper.py
opendata/usac-mcp-server/: README.md  SETUP.md  pyproject.toml  server.py  test_minimal_mcp.py  test_server.py  test_stdio.py
seo-agents/: SEO_STRATEGY_COMPLETE.md  config.json  (+5 more)
(+22 files in other folders)
