[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usac-mcp-server"
version = "1.0.0"
description = "MCP server for USAC E-Rate Open Data API access"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "E-Rate Data Team"}
]
dependencies = [
    "mcp>=0.9.0",
    "pandas>=2.0.0",
    "requests>=2.31.0"
]

[project.scripts]
usac-mcp-server = "server:main"
